--- a/webroot/index.html
+++ b/webroot/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <title>Bet it Now</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link rel="icon" href="img/icono.ico">
 </head>
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top">
+
             <div class="navbar-header">
                 <img src="img/logoBiN.png" alt="logo" href="#" width="150px" height="60px">
             </div>
@@ -24,13 +27,7 @@
 
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
-                    <div class="form-group">
-                        <input type="text" placeholder="Correo" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" placeholder="Contrseña" class="form-control">
-                    </div>
-                    <button type="button" class="btn btn-sm btn-success">Iniciar sesión</button>
+                    <button type="button" class="btn btn-xs btn-link">Iniciar sesión</button>
                     <button type="button" class="btn btn-xs btn-link">Registrarse</button>
                 </form>
 
@@ -38,6 +35,32 @@
             <!--/.navbar-collapse -->
         </nav>
     </div>
+    <!--/ footer -->
+    <footer class="pie-pagina">
+        <div class="row">
+            <div class="col-lg-12 ">
+                <div class="col-md-3">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><button type="button" class="btn btn-xs btn-link">Quienes somos</button></li>
+                        <li><button type="button" class="btn btn-xs btn-link">Términos y condiciones de uso</button></li>
+                        <li><button type="button" class="btn btn-xs btn-link">contáctenos</button></li>
+                    </ul>
+                </div>
+                <div class="col-md-9">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li>
+                            <a href="#" class="col-md-1 "><img src="img/facebook.png" alt="Página de facebook"></a>
+
+                            <a href="#" class="col-md-1"><img src="img/twitter.png" alt="Página de twitter"></a>
+
+                            <a href="#" class="col-md-1"><img src="img/google-plus.png" alt="cuenta de Google"></a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
