--- a/webroot/retirar.html
+++ b/webroot/retirar.html
@@ -33,7 +33,7 @@
                         </div>
                         
                         <div>
-                            <label>Valor a Recargar</label>
+                            <label>Valor a Retirar</label>
                             <input type="text" class="form-control"placeholder="$0.00">
                         </div>
                         
