--- a/webroot/login.html
+++ b/webroot/login.html
@@ -10,17 +10,45 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class="navbar navbar-default navbar-fixed-top">
 
+            <div class="navbar-header">
+                <a href="index.html"><img src="img/logoBiN.png" alt="logo" href="#" width="150px" height="60px"></a>
+            </div>
+
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Inicio</a></li>
+                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="#">Mis apuestas</a></li>
+                <li><a href="historial_apuestas.html">Historial</a></li>
+                <li><a href="recargar.html">Recargar</a></li>
+                <li><a href="retirar.html">Retirar</a></li>
+            </ul>
+
+            <div id="navbar" class="navbar-collapse collapse">
+                <form class="navbar-form navbar-right">
+                    <a href="login.html">
+                    <button type="button" class="btn btn-xs btn-link">Iniciar sesión</button></a>
+                    <a href="registro.html">
+                    <button type="button" class="btn btn-xs btn-link">Registrarse</button></a>
+                </form>
+
+            </div>
+            <!--/.navbar-collapse -->
+        </nav>
+        
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-
+                <h1>-</h1>
                 <div class="row panel">
                     <div class="col-xs-6">
-                        <a href="#" class="active" id="login-form-link">Login</a>
+                        <a href="login.html" class="active" id="login-form-link">Login</a>
                     </div>
                     <div class="col-xs-6">
-                        <a href="#" id="register-form-link">Register</a>
+                        <a href="registro.html" id="register-form-link">Register</a>
                     </div>
                 </div>
 
