--- a/webroot/perfil.html
+++ b/webroot/perfil.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bet it Now</title>
+    <title>Bet it Now - Perfil</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link rel="icon" href="img/icono.ico">
@@ -14,21 +14,24 @@
         <nav class="navbar navbar-default navbar-fixed-top">
 
             <div class="navbar-header">
-                <img src="img/logoBiN.png" alt="logo" href="#" width="150px" height="60px">
+                <a href="index.html"><img src="img/logoBiN.png" alt="logo" href="#" width="150px" height="60px"></a>
             </div>
 
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#">Perfil</a></li>
+                <li class="active"><a href="index.html">Inicio</a></li>
+                <li><a href="perfil.html">Perfil</a></li>
                 <li><a href="#">Mis apuestas</a></li>
-                <li><a href="#">Historial</a></li>
-                <li><a href="#">Recargar/retirar</a></li>
+                <li><a href="historial_apuestas.html">Historial</a></li>
+                <li><a href="recargar.html">Recargar</a></li>
+                <li><a href="retirar.html">Retirar</a></li>
             </ul>
 
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
-                    <button type="button" class="btn btn-xs btn-link">Iniciar sesión</button>
-                    <button type="button" class="btn btn-xs btn-link">Registrarse</button>
+                    <a href="login.html">
+                    <button type="button" class="btn btn-xs btn-link">Iniciar sesión</button></a>
+                    <a href="registro.html">
+                    <button type="button" class="btn btn-xs btn-link">Registrarse</button></a>
                 </form>
 
             </div>
